# jira-sync

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: jira-sync.1  jira-sync.man
src/: cli.rs  clockify.rs  issues.rs  jira_issues_result.rs  lib.rs  time_breakdown.rs
