[package]
name = "jira-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
jira_query = "1.3.0"
reqwest = "0.11.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
csv = "1.3.0"
chrono = "0.4.35"
config = "0.14.0"
lazy_static = "1.4.0"
confy = "0.6.1"
clap_complete = "4"
clap = { version = "4.5", features = [ "derive", "env" ] }
inquire ={ version =  "0.7.1", features = [ "macros"] }
